--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Anviya Digital Marketing Agency</h1>
+    <h1>Anv Digital Marketing Agency</h1>
     <p>Transform your digital space with our unique blend of creativity, technology and expertise.</p>
   </header>
 
