--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Anviya Digital Marketing Agency</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="canonical" href="https://anviya.com/" />
 </head>
 <body>
   <header>
