--- a/index.html
+++ b/index.html
@@ -15,31 +15,63 @@
 
 
 
-  <section id="gallery">
-    <h2>What Makes Us Different?</h2>
-    <div class="gallery">
-    <div class="creation">
-        <img src="Images/digitalbuggu.jpg" alt="Creative designs">
-        <h3>Creativity & Innovation</h3>
-        <p>Our strategies push the boundaries of traditional digital marketing, delivering innovative solutions that drive brand growth and meaningful audience engagement</p>
+ <section id="gallery">
+  <h2>What Makes Us Different?</h2>
+  <div class="swiper-container">
+    <div class="swiper-wrapper">
+      <!-- Slide 1 -->
+      <div class="swiper-slide">
+        <div class="slide-content">
+          <img src="Images/digitalbuggu.jpg" alt="Creative designs">
+          <div class="slide-text">
+            <h3>Creativity & Innovation</h3>
+            <p>
+              Our strategies push the boundaries of traditional digital marketing, delivering innovative solutions that drive brand growth and meaningful audience engagement.
+            </p>
+          </div>
+        </div>
       </div>
-       <div class="creation">
-        <img src="Images/client-handshake.jpg" alt="Client-centric design">
-        <h3>Client-Centric Approach</h3>
-        <p>We prioritize your goals and vision, ensuring a collaborative, transparent, and results-driven approach to achieving impactful marketing success.</p>
+      <!-- Slide 2 -->
+      <div class="swiper-slide">
+        <div class="slide-content">
+          <img src="Images/client-handshake.jpg" alt="Client-centric design">
+          <div class="slide-text">
+            <h3>Client-Centric Approach</h3>
+            <p>
+              We prioritize your goals and vision, ensuring a collaborative, transparent, and results-driven approach to achieving impactful marketing success.
+            </p>
+          </div>
+        </div>
       </div>
-       <div class="creation">
-        <img src="Images/trusted-expertise.jpg" alt="Expert design team">
-        <h3>Expertise You Can Trust</h3>
-        <p>With years of experience and a deep understanding of the digital landscape, we deliver innovative strategies that drive lasting success and growth.</p>
+      <!-- Slide 3 -->
+      <div class="swiper-slide">
+        <div class="slide-content">
+          <img src="Images/trusted-expertise.jpg" alt="Expert design team">
+          <div class="slide-text">
+            <h3>Expertise You Can Trust</h3>
+            <p>
+              With years of experience and a deep understanding of the digital landscape, we deliver innovative strategies that drive lasting success and growth.
+            </p>
+          </div>
+        </div>
       </div>
-       <div class="creation">
-        <img src="Images/future-ready-visualization.jpg" alt="AR visualization">
-        <h3>Future-Ready Visualization</h3>
-        <p>After partnering with us, experience cutting-edge strategies and innovative campaigns designed to position your brand for long-term success.</p>
+      <!-- Slide 4 -->
+      <div class="swiper-slide">
+        <div class="slide-content">
+          <img src="Images/future-ready-visualization.jpg" alt="AR visualization">
+          <div class="slide-text">
+            <h3>Future-Ready Visualization</h3>
+            <p>
+              After partnering with us, experience cutting-edge strategies and innovative campaigns designed to position your brand for long-term success.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
-  </section>
+    <!-- Pagination -->
+    <div class="swiper-pagination"></div>
+  </div>
+</section>
 
   <section id="gallery">
   <h2>Our Vision</h2>
