--- a/index.html
+++ b/index.html
@@ -120,23 +120,23 @@
   <div class="highlight-container">
     <div class="highlight-card">
       <img src="Images/data-driven.jpg" alt="Feature 1">
-      <h3>Data-Driven Campaigns</h3>
-      <p>Harness the power of data to create marketing campaigns that deliver measurable and impactful results.</p>
+      <h3>Search Engine Optimization (SEO)</h3>
+      <p>Boost your online visibility and attract organic traffic with advanced SEO strategies. From in-depth keyword research to technical audits and content optimization, we ensure your website ranks higher and reaches the right audience.</p>
     </div>
     <div class="highlight-card">
       <img src="Images/Omnichannel-Marketing.jpg" alt="Feature 2">
-      <h3>Omnichannel Marketing</h3>
-      <p>Engage your audience seamlessly across multiple platforms, ensuring your brand's message is consistent and compelling.</p>
+      <h3>Social Media Marketing (SMM)</h3>
+      <p>Grow your brand’s social media presence with targeted campaigns, engaging posts, and insightful analytics. We create tailored strategies for platforms like Facebook, Instagram, LinkedIn, and TikTok to connect with your audience and drive conversions.</p>
     </div>
     <div class="highlight-card">
       <img src="Images/seo.jpg" alt="Feature 3">
-      <h3>SEO Optimization</h3>
-      <p>Boost your online presence with advanced SEO techniques that drive organic traffic and improve search engine rankings.</p>
+      <h3>Pay-Per-Click Advertising (PPC)</h3>
+      <p>Maximize ROI with strategic ad campaigns on platforms like Google Ads and Bing. From ad creation to keyword management, we help you reach your audience quickly and effectively while minimizing costs.</p>
     </div>
     <div class="highlight-card">
       <img src="Images/creative-content-solutions.jpg" alt="Feature 4">
-      <h3>Creative Content Solutions</h3>
-      <p>Stand out with engaging content crafted to connect with your audience and tell your brand's story effectively.</p>
+      <h3>Website Development</h3>
+      <p>Create a strong online foundation with a custom-designed, user-friendly website. Whether it’s an e-commerce platform or a corporate site, we build responsive, SEO-friendly websites tailored to your business needs and goals.</p>
     </div>
   </div>
 </section>
