--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <div class="highlight-card">
       <img src="Images/Omnichannel-Marketing.jpg" alt="Feature 2">
       <h3>Social Media Marketing (SMM)</h3>
-      <p>Grow your brand’s social media presence with targeted campaigns, engaging posts, and insightful analytics. We create tailored strategies for platforms like Facebook, Instagram, LinkedIn, and TikTok to connect with your audience and drive conversions.</p>
+      <p>Grow your brand’s social media presence with targeted campaigns, engaging posts, and insightful analytics. We create tailored strategies for platforms like Facebook and Instagram to connect with your audience and drive conversions.</p>
     </div>
     <div class="highlight-card">
       <img src="Images/seo.jpg" alt="Feature 3">
