--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Anviya Digital Marketing Agency</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
+<style>
+/* Critical Swiper Styles */
+.swiper-container {
+  width: 100%;
+  height: 100%;
+}
+.swiper-slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.swiper-pagination {
+  text-align: center;
+  margin-top: 10px;
+}
+</style>
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" media="print" onload="this.media='all'">
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js" defer></script>
 </head>
 <body>
   <header>
