--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   margin-top: 10px;
 }
 </style>
-<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" media="print" onload="this.media='all'">
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js" defer></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11.2.1/swiper-bundle.min.css" media="print" onload="this.media='all'">
+<script src="https://cdn.jsdelivr.net/npm/swiper@11.2.1/swiper-bundle.min.js" defer></script>
 </head>
 <body>
   <header>
