--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Anviya Digital Marketing Agency</title>
   <link rel="stylesheet" href="styles.css">
 
-<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" media="print" onload="this.media='all'">
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js" defer></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11.2.1/swiper-bundle.min.css" media="print" onload="this.media='all'">
+<script src="https://cdn.jsdelivr.net/npm/swiper@11.2.1/swiper-bundle.min.js" defer></script>
 </head>
 <body>
   <header>
