--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Anviya Digital Marketing Agency</title>
+  <title>Anv Digital Marketing Agency</title>
   <link rel="stylesheet" href="styles.css">
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11.2.1/swiper-bundle.min.css" media="print" onload="this.media='all'">
-<script src="https://cdn.jsdelivr.net/npm/swiper@11.2.1/swiper-bundle.min.js" defer></script>
+  <!-- Defer Swiper CSS for print and load asynchronously -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11.2.1/swiper-bundle.min.css" media="print" onload="this.media='all'">
+  <!-- Use async for Swiper JS to load it after page load -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11.2.1/swiper-bundle.min.js" defer></script>
+
+  <!-- Optimize Google Fonts -->
+  <link rel="preload" href="https://fonts.gstatic.com" as="font" type="font/woff2" crossorigin="anonymous">
 </head>
 <body>
   <header>
