--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Anv Digital Marketing Agency</title>
+  <title>Anviya Digital Marketing Agency | Leading SEO and Brand Mangement Company in Mumbai, Thane and Goa</title>
+  <meta name="description" content="Anviya, is a leading digital marketing company in Mumbai, Thane and Goa offering a wide range of online brand management services. These include SEO campaigns, Instagram Marketing and PPC. Connect with us to start your digital journey.">
   <link rel="stylesheet" href="styles.css">
 
   <!-- Defer Swiper CSS for print and load asynchronously -->
