--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YCKWB5LJJ3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YCKWB5LJJ3');
+</script>
   <title>Anviya Digital Marketing Agency | Leading SEO and Brand Mangement Company in Mumbai, Thane and Goa</title>
   <meta name="description" content="Anviya, is a leading digital marketing company in Mumbai, Thane and Goa offering a wide range of online brand management services. These include SEO campaigns, Instagram Marketing and PPC. Connect with us to start your digital journey.">
   <link rel="stylesheet" href="styles.css">
@@ -11,7 +20,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11.2.1/swiper-bundle.min.css" media="print" onload="this.media='all'">
   <!-- Use async for Swiper JS to load it after page load -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11.2.1/swiper-bundle.min.js" defer></script>
-
   <!-- Optimize Google Fonts -->
   <link rel="preload" href="https://fonts.gstatic.com" as="font" type="font/woff2" crossorigin="anonymous">
 </head>
