--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <script src="https://cdn.jsdelivr.net/npm/swiper@11.2.1/swiper-bundle.min.js" defer></script>
   <!-- Optimize Google Fonts -->
   <link rel="preload" href="https://fonts.gstatic.com" as="font" type="font/woff2" crossorigin="anonymous">
+  <meta name="robots" content="index, follow">
 </head>
 <body>
   <header>
