--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <!-- Slide 1 -->
       <div class="swiper-slide">
         <div class="slide-content">
-          <img src="Images/digitalbuggu.jpg" alt="Creative designs">
+          <img src="Images/creativity.jpg" alt="Creative design">
           <div class="slide-text">
             <h3>Creativity & Innovation</h3>
             <p>
@@ -50,7 +50,7 @@
       <!-- Slide 2 -->
       <div class="swiper-slide">
         <div class="slide-content">
-          <img src="Images/client-handshake.jpg" alt="Client-centric design">
+          <img src="Images/client-standing.jpg" alt="Client Centric Approach">
           <div class="slide-text">
             <h3>Client-Centric Approach</h3>
             <p>
@@ -62,7 +62,7 @@
       <!-- Slide 3 -->
       <div class="swiper-slide">
         <div class="slide-content">
-          <img src="Images/trusted-expertise.jpg" alt="Expert design team">
+          <img src="Images/trusted-expertise.jpg" alt="Trusted Expertise">
           <div class="slide-text">
             <h3>Expertise You Can Trust</h3>
             <p>
@@ -74,7 +74,7 @@
       <!-- Slide 4 -->
       <div class="swiper-slide">
         <div class="slide-content">
-          <img src="Images/future-ready-visualization.jpg" alt="AR visualization">
+          <img src="Images/future-ready-visualization.jpg" alt="FR visualization">
           <div class="slide-text">
             <h3>Future-Ready Visualization</h3>
             <p>
@@ -99,14 +99,14 @@
   </p>
   <div class="gallery">
     <div class="creation">
-      <img src="Images/tailored-strategies.jpg" alt="Living Room Design">
+      <img src="Images/tailored-strategies.jpg" alt="Tailored Strategy">
       <h3>Tailored Strategies</h3>
       <p>
         We understand that every business is unique, with its own set of challenges and goals. Our team specializes in crafting customized marketing solutions that align with your specific needs. From brand positioning to campaign execution, we design strategies that drive measurable growth, elevate your presence, and ensure long-term success in a competitive market.
       </p>
     </div>
     <div class="creation">
-      <img src="Images/collaborative-approach.jpg" alt="Dining Room Design">
+      <img src="Images/collaborative-approach.jpg" alt="Collaborative Approach">
       <h3>Collaborative Approach</h3>
       <p>
         Your vision is at the heart of everything we do. We believe in building strong partnerships with our clients, working hand-in-hand to create impactful marketing campaigns that resonate with your target audience. By aligning our expertise with your brand’s goals, we ensure that every initiative reflects your identity and delivers meaningful results.
@@ -114,7 +114,7 @@
       </p>
     </div>
     <div class="creation">
-      <img src="Images/forward-thinking-solutions.jpg" alt="Bedroom Design">
+      <img src="Images/forward-thinking-solutions.jpg" alt="Forward Thinking Solutions">
       <h3>Forward-Thinking Solutions</h3>
       <p>
         In the ever-evolving world of digital marketing, staying ahead of the curve is essential. Our forward-thinking approach focuses on leveraging the latest trends and tools to position your brand as a leader in your industry. By anticipating market shifts and consumer behavior, we craft strategies that not only meet today’s demands but also prepare your business for tomorrow’s opportunities.
@@ -122,7 +122,7 @@
       </p>
     </div>
     <div class="creation">
-      <img src="Images/innovative-ideas.jpg" alt="Office Design">
+      <img src="Images/innovative-ideas.jpg" alt="Innovation">
       <h3>Innovative Campaign Ideas</h3>
       <p>
         We provide a dynamic and creative workspace where your brand's growth takes center stage. Our team designs campaigns with meticulous precision, combining fresh perspectives and out-of-the-box thinking. By blending innovative strategies with data-driven insights, we create marketing solutions that not only capture attention but also deliver measurable results. From conceptualization to execution, every step is tailored to maximize your marketing efficiency and drive your business forward.
@@ -134,22 +134,22 @@
   <h2>Our Highlights</h2>
   <div class="highlight-container">
     <div class="highlight-card">
-      <img src="Images/seo.jpg" alt="Feature 1">
+      <img src="Images/seo.jpg" alt="SEO Blocks">
       <h3>Search Engine Optimization (SEO)</h3>
       <p>Boost your online visibility and attract organic traffic with advanced SEO strategies. From in-depth keyword research to technical audits and content optimization, we ensure your website ranks higher and reaches the right audience.</p>
     </div>
     <div class="highlight-card">
-      <img src="Images/data-driven.jpg" alt="Feature 2">
+      <img src="Images/smo.jpg" alt="Social Media on phone">
       <h3>Social Media Marketing (SMM)</h3>
       <p>Grow your brand’s social media presence with targeted campaigns, engaging posts, and insightful analytics. We create tailored strategies for platforms like Facebook and Instagram to connect with your audience and drive conversions.</p>
     </div>
     <div class="highlight-card">
-      <img src="Images/creative-content-solutions.jpg" alt="Feature 3">
-      <h3>Pay-Per-Click Advertising (PPC)</h3>
-      <p>Maximize ROI with strategic ad campaigns on platforms like Google Ads and Bing. From ad creation to keyword management, we help you reach your audience quickly and effectively while minimizing costs.</p>
+      <img src="Images/brand-management.jpg" alt="Paper showing brand management steps">
+      <h3>Brand Management and PPC</h3>
+      <p>Maximize your brand’s impact with strategic management and paid campaigns on major platforms. From building a consistent brand identity to ad creation, we help you reach your audience effectively while minimizing costs and boosting ROI.</p>
     </div>
     <div class="highlight-card">
-      <img src="Images/Omnichannel-Marketing.jpg" alt="Feature 4">
+      <img src="Images/website-development.jpg" alt="Laptop showing an image website">
       <h3>Website Development</h3>
       <p>Create a strong online foundation with a custom-designed, user-friendly website. Whether it’s an e-commerce platform or a corporate site, we build responsive, SEO-friendly websites tailored to your business needs and goals.</p>
     </div>
@@ -164,15 +164,15 @@
       <p>
         At our digital marketing agency, we believe that every brand has its own unique story to tell. With over a decade of experience across various industries, we specialize in transforming your vision into impactful strategies. Our team combines unmatched creativity with cutting-edge marketing techniques to craft personalized campaigns that resonate with your audience and drive meaningful results.
       </p>
-      <img src="Images/about-us-team.jpg" alt="Team collaboration 400x300">
+      <img src="Images/about-us-team.jpg" alt="Team collaboration">
     </div>
   </div>
   <div class="about-wrapper">
     <div class="about-content">
       <p>
-        We understand that each client is unique, and so are their goals. That’s why we take the time to listen, collaborate, and deliver marketing strategies that align perfectly with your vision. Whether you need to boost your online presence, grow your audience, or drive sales, we ensure that our campaigns are both impactful and results-driven.
+        We understand that each client is unique, and so are their goals. That’s why we take the time to listen, collaborate and deliver marketing strategies that align perfectly with your vision. Whether you need to boost your online presence, grow your audience or drive sales, we ensure that our campaigns are both impactful and results-driven.
       </p>
-      <img src="Images/second-about-us.jpg" alt="Creative design process">
+      <img src="Images/second-about-us.jpg" alt="Image of creative umbrellas">
     </div>
   </div>
 </section>
