--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <img src="Images/innovative-ideas.jpg" alt="Innovation">
       <h3>Innovative Campaign Ideas</h3>
       <p>
-        We provide a dynamic and creative workspace where your brand's growth takes center stage. Our team designs campaigns with meticulous precision, combining fresh perspectives and out-of-the-box thinking. By blending innovative strategies with data-driven insights, we create marketing solutions that not only capture attention but also deliver measurable results. From conceptualization to execution, every step is tailored to maximize your marketing efficiency and drive your business forward.
+        At Anviya, your brand's growth takes center stage. Our team designs campaigns with meticulous precision, combining fresh perspectives and out-of-the-box thinking. By blending innovative strategies with data-driven insights, we create solutions that not only capture attention but also deliver measurable results. From conceptualization to execution, every step is tailored to maximize your marketing efficiency.
       </p>
     </div>
   </div>
