--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
   gtag('config', 'G-YCKWB5LJJ3');
 </script>
-  <title>Anviya Digital Marketing Agency | Leading SEO and Brand Mangement Company in Mumbai, Thane and Goa</title>
-  <meta name="description" content="Anviya, is a leading digital marketing company in Mumbai, Thane and Goa offering a wide range of online brand management services. These include SEO campaigns, Instagram Marketing and PPC. Connect with us to start your digital journey.">
+  <title>Anviya | Leading Digital Marketing and SEO Company in Mumbai, Thane and Goa</title>
+  <meta name="description" content="Anviya, is a leading digital marketing company in Mumbai, Thane and Goa offering a wide range of online brand marketing services. These include SEO campaigns, Instagram Marketing and PPC. Connect with us to start your digital journey.">
   <link rel="stylesheet" href="styles.css">
 
   <!-- Defer Swiper CSS for print and load asynchronously -->
