--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   gtag('config', 'G-YCKWB5LJJ3');
 </script>
   <title>Anviya | Leading Digital Marketing and SEO Company in Mumbai, Thane and Goa</title>
-  <meta name="description" content="Anviya, is a leading digital marketing company in Mumbai, Thane and Goa offering a wide range of online brand marketing services. These include SEO campaigns, Instagram Marketing and PPC. Connect with us to start your digital journey.">
+  <meta name="description" content="Anviya offers a wide range of digital marketing services in Mumbai, Thane and Goa. These services include SEO, Instagram Marketing, PPC and Web development.">
   <link rel="stylesheet" href="styles.css">
 
   <!-- Defer Swiper CSS for print and load asynchronously -->
