--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <!-- Optimize Google Fonts -->
   <link rel="preload" href="https://fonts.gstatic.com" as="font" type="font/woff2" crossorigin="anonymous">
   <meta name="robots" content="index, follow">
+  <link rel="canonical "href="https://anviya.com/">
 </head>
 <body>
   <header>
