--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
   <link rel="preload" href="https://fonts.gstatic.com" as="font" type="font/woff2" crossorigin="anonymous">
   <meta name="robots" content="index, follow">
   <link rel="canonical "href="https://anviya.com/">
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "name": "Anviya - Digital marketing agency offering services in Mumbai, Thane and Goa.",
+  "url": "https://anviya.com",
+  "description": "Anviya is a digital marketing agency offering services like SEO, SMO and PPC in locations of Mumbai, Thane and Goa."
+}
+</script>
 </head>
 <body>
   <header>
