--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   gtag('config', 'G-YCKWB5LJJ3');
 </script>
-  <title>Anviya | Leading Digital Marketing and SEO Company in Mumbai, Thane and Goa</title>
+  <title>Anviya Technologies | Leading Digital Marketing and SEO Company in Mumbai, Thane and Goa</title>
   <meta name="description" content="Anviya offers a wide range of digital marketing services in Mumbai, Thane and Goa. These services include SEO, Instagram Marketing, PPC and Web development.">
   <link rel="stylesheet" href="styles.css">
 
@@ -28,15 +28,15 @@
 {
   "@context": "https://schema.org",
   "@type": "WebPage",
-  "name": "Anviya - Digital marketing agency offering services in Mumbai, Thane and Goa.",
+  "name": "Anviya Technologies - Digital marketing agency offering services in Mumbai, Thane and Goa.",
   "url": "https://www.anviya.com",
-  "description": "Anviya is a digital marketing agency offering services like SEO, SMO and PPC in locations of Mumbai, Thane and Goa."
+  "description": "Anviya Technologies is a digital marketing agency offering services like SEO, SMO and PPC in locations of Mumbai, Thane and Goa."
 }
 </script>
 </head>
 <body>
   <header>
-    <h1>Anviya Digital Marketing Agency</h1>
+    <h1>Anviya Tech Digital Marketing Agency</h1>
     <p>Transform your digital space with our unique blend of creativity, technology and expertise.</p>
   </header>
 
