--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- Optimize Google Fonts -->
   <link rel="preload" href="https://fonts.gstatic.com" as="font" type="font/woff2" crossorigin="anonymous">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://www.anviya.com/">
+  <link rel="canonical" href="https://anviya.com/">
   <script type="application/ld+json">
 {
   "@context": "https://schema.org",
