--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   "@context": "https://schema.org",
   "@type": "WebPage",
   "name": "Anviya Technologies - Digital marketing agency offering services in Mumbai, Thane and Goa.",
-  "url": "https://www.anviya.com",
+  "url": "https://anviya.com",
   "description": "Anviya Technologies is a digital marketing agency offering services like SEO, SMO and PPC in locations of Mumbai, Thane and Goa."
 }
 </script>
